--- a/locale/fi_FI.po
+++ b/locale/fi_FI.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: UKBot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-01 21:02+0000\n"
+"POT-Creation-Date: 2024-09-30 22:15+0200\n"
 "PO-Revision-Date: 2019-09-05 01:56+0200\n"
 "Last-Translator: Dan Michael O. Heggø <danmichaelo@gmail.com>\n"
 "Language-Team: \n"
@@ -18,15 +18,187 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 2.2.3\n"
 
-#: ukbot/contributions.py:164 ukbot/ukbot.py:747
+#: ukbot/contest.py:65
+#, python-format
+msgid "The filter name \"%s\" was not understood"
+msgstr ""
+
+#: ukbot/contest.py:155
+msgid "Couldn't find the list of participants!"
+msgstr "Osallistujaluettelon löytäminen epäonnistui!"
+
+#: ukbot/contest.py:183
+#, python-format
+msgid ""
+"There are no point rules defined for this contest. Point rules are defined "
+"by {{tl|%(template)s}}."
+msgstr ""
+"Tähän kilpailuun ei ole asetettu pistelaskusääntöjä. Säännöt merkitään näin: "
+"{{tl|%(template)s}}."
+
+#: ukbot/contest.py:228
+#, fuzzy, python-format
+msgid "Could not parse {{tlx|%(template)s|%(firstarg)s}} template: %(err)s"
+msgstr "{{tl|%(template)s}}-mallineen ymmärtäminen epäonnistui."
+
+#: ukbot/contest.py:258
+#, python-format
+msgid "Unkown argument given to {{tl|%(template)s}}: %(argument)s"
+msgstr ""
+"Tuntematon argumentti on annettu kohteeseen {{tl|%(template)s}}: %(argument)s"
+
+#: ukbot/contest.py:289
+#, python-format
+msgid "Couldn't parse the date given to the {{tl|%(template)s}} template."
+msgstr ""
+"{{tl|%(template)s}}-mallineeseen annettu päivämäärä ei tullut ymmärretyksi."
+
+#: ukbot/contest.py:322
+#, python-format
+msgid ""
+"Could not find the user %(user)s given to the {{tl|%(template)s}} template."
+msgstr "Käyttäjää %(user)s ri löytynyt {{tl|%(template)s}}-mallineesta."
+
+#: ukbot/contest.py:335 ukbot/contest.py:375
+#, python-format
+msgid ""
+"Failed to parse the %(template)s template: Did not find a site matching the "
+"site prefix %(prefix)s"
+msgstr ""
+
+#: ukbot/contest.py:354 ukbot/contest.py:394
+#, python-format
+msgid ""
+"Couldn't find the user %(user)s given to the {{tl|%(template)s}} template."
+msgstr "Ei löydetty käyttäjää %(user)s {{tl|%(template)s}}-mallineesta."
+
+#: ukbot/contest.py:529
+msgid "Day"
+msgstr "Päivä"
+
+#: ukbot/contest.py:530
+msgid "Points"
+msgstr "Pisteet"
+
+#: ukbot/contest.py:533 ukbot/contest.py:748 ukbot/contest.py:935
+#: ukbot/contest.py:936 ukbot/contest.py:937
+msgid "%e. %B %Y, %H:%M"
+msgstr "%e. %Bta %Y kello %H.%M"
+
+#: ukbot/contest.py:534
+#, python-format
+msgid "Updated %(date)s"
+msgstr "Päivitetty %(date)s"
+
+#: ukbot/contest.py:569
+#, python-format
+msgid "Weekly contest for week %(week)d"
+msgstr "Viikon %(week)d kilpailu"
+
+#: ukbot/contest.py:571
+#, python-format
+msgid "Weekly contest for week %(startweek)d–%(endweek)d"
+msgstr "Viikkojen %(startweek)d–%(endweek)d kilpailu"
+
+#: ukbot/contest.py:649
+msgid "Regards"
+msgstr "Terveisin"
+
+#: ukbot/contest.py:649
+msgid "and"
+msgstr "ja"
+
+#: ukbot/contest.py:679
+#, python-format
+msgid ""
+"Now you must check if the results look ok. If there are error messages at "
+"the bottom of the [[%(page)s|contest page]], you should check that the "
+"related contributions have been awarded the correct number of points. Also "
+"check if there are comments or complaints on the discussion page. If "
+"everything looks fine, [%(link)s click here] (and save) to indicate that I "
+"can send out the awards at first occasion."
+msgstr ""
+"Nyt sinun on tarkistettava tulokset. Mikäli [[%(page)s|kilpailusivun]] "
+"lopussa on virheilmoituksia, on sinun tarkistettava, että muokkauksista on "
+"saatu oikea määrä pisteitä. Katso myös onko keskustelusivulla kommentteja "
+"tai valituksia. Jos kaikki näyttää olevan kunnossa, paina [%(link)s tästä] "
+"(ja tallenna), niin rusetit lähetetään melko nopeasti."
+
+#: ukbot/contest.py:680
+msgid "Thanks, ~~~~"
+msgstr "Terveisin, ~~~~"
+
+#: ukbot/contest.py:691
+#, python-format
+msgid "Awards have been [%(link)s sent out]."
+msgstr "Rusetit on nyt [%(link)s jaettu]."
+
+#: ukbot/contest.py:880 ukbot/ukbot.py:148 ukbot/ukbot.py:151
+msgid "UKBot encountered a problem"
+msgstr "UKBot havaitsi ongelman"
+
+#: ukbot/contest.py:930
+msgid ""
+"This contest is closed – thanks to everyone who participated! Awards will be "
+"sent out as soon as the contest organizer has checked the results."
+msgstr ""
+"Tämä kilpailu on päättynyt – kiitos kaikille osallistuneille! Rusetit "
+"jaetaan heti kun kilpailun järjestäjä on tarkistanut tulokset."
+
+#: ukbot/contest.py:932
+msgid "This contest is closed – thanks to everyone who participated!"
+msgstr "Tämä kilpailu on päättynyt – kiitos kaikille osallistuneille!"
+
+#: ukbot/contest.py:939
+#, python-format
+msgid ""
+"Last updated %(lastupdate)s. The contest is open from %(startdate)s to "
+"%(enddate)s."
+msgstr ""
+"Päivitetty viimeksi %(lastupdate)s. Kilpailu on avoinna  %(startdate)s – "
+"%(enddate)s."
+
+#: ukbot/contest.py:960
+#, fuzzy, python-format
+msgid "UKBot encountered the following problems with the page [[%s]]"
+msgstr "UKBot havaitsi seuraavat ongelmat artikkeliin [[:%s]] liittyen"
+
+#: ukbot/contest.py:994
+#, python-format
+msgid "Results markers %(start_marker)s and %(end_marker)s not found"
+msgstr ""
+
+#: ukbot/contest.py:1005
+#, python-format
+msgid "No \"%(section_name)s\" section found."
+msgstr ""
+
+#: ukbot/contest.py:1015
+msgid "Updating with final results, the contest is now closed."
+msgstr "Lisätään lopulliset tulokset ja merkitään kilpailu päättyneeksi."
+
+#: ukbot/contest.py:1017
+msgid "Checking results and handing out awards"
+msgstr "Tarkistetaan tulokset ja jaetaan rusetit"
+
+#: ukbot/contest.py:1019
+msgid "Updating"
+msgstr "Päivitetään"
+
+#: ukbot/contest.py:1149
+#, python-format
+msgid "The weekly contest is: %(link)s"
+msgstr "Viikon kilpailu on: %(link)s"
+
+#: ukbot/contributions.py:164 ukbot/user.py:674
 msgid "suspended since"
 msgstr "suspendert siden"
 
-#: ukbot/contributions.py:164 ukbot/ukbot.py:747
+#: ukbot/contributions.py:164 ukbot/user.py:674
 msgid "%A, %H:%M"
 msgstr "%A kello %H.%M"
 
-#: ukbot/contributions.py:178 ukbot/ukbot.py:752
+#: ukbot/contributions.py:178 ukbot/user.py:679
 msgid "No qualifying contributions registered yet"
 msgstr "Hyväksyttyjä muokkauksia ei ole vielä rekisteröity"
 
@@ -55,12 +227,12 @@ msgstr "Luokkaosuma"
 
 #: ukbot/contributions.py:278
 #, fuzzy, python-format
-msgid "Total: {{formatnum:%(bytecount)d}} bytes, %(wordcount)d words"
+msgid "Total: %(bytecount)d bytes, %(wordcount)d words"
 msgstr ""
 "Yhteensä: {{formatnum:%(bytecount)d}} {{subst:PLURAL:%(bytecount)d|tavu|"
 "tavua}}, %(wordcount)d {{subst:PLURAL:%(wordcount)d|sana|sanaa}}"
 
-#: ukbot/contributions.py:291
+#: ukbot/contributions.py:293
 msgid ""
 "<strong>Note:</strong> The contributions to this article are currently "
 "disqualified."
@@ -68,14 +240,53 @@ msgstr ""
 "<strong>Huomio:</strong> Muokkaukset tähän artikkeliin on toistaiseksi "
 "hylätty."
 
-#: ukbot/contributions.py:300
+#: ukbot/contributions.py:302
 msgid "<abbr class=\"newpage\" title=\"New page\">N</abbr>"
 msgstr "<abbr class=\"newpage\" title=\"Uusi sivu\">U</abbr>"
 
-#: ukbot/contributions.py:303
+#: ukbot/contributions.py:305
 #, fuzzy
 msgid "<abbr class=\"newpage\" title=\"Wikidata item\">W</abbr>"
 msgstr "<abbr class=\"newpage\" title=\"Uusi sivu\">U</abbr>"
+
+#: ukbot/filters.py:150
+#, fuzzy
+msgid "Too few arguments given to this template."
+msgstr ""
+"Tuntematon argumentti on annettu kohteeseen {{tl|%(template)s}}: %(argument)s"
+
+#: ukbot/filters.py:198
+#, fuzzy, python-format
+msgid ""
+"Could not analyze page %(article)s because the revision %(rev)d could not be "
+"parsed: %(error)s"
+msgstr ""
+"Artikkelin %(article)s analysointi epäonnistui sillä versio %(prevrev)d tai "
+"%(rev)d ei tullut ymmärreyksi: %(error)s"
+
+#: ukbot/filters.py:233
+msgid "Could not parse the catignore page"
+msgstr "Catignore-sivun sisältöä ei ymmärretty"
+
+#: ukbot/filters.py:238
+msgid "No category values given!"
+msgstr ""
+
+#: ukbot/filters.py:444
+msgid "Encountered an infinite category loop: "
+msgstr "Jumiutunut loputtomaan luokkasilmukkaan: "
+
+#: ukbot/filters.py:483
+#, fuzzy
+msgid "No byte limit (second argument) given"
+msgstr ""
+"Tavurajaa (toinen argumentti) ei ole annettu kohteeseen {{tlx|%(template)s|"
+"%(firstarg)s}}"
+
+#: ukbot/filters.py:720
+#, python-format
+msgid "No \"%s\" parameter given"
+msgstr ""
 
 #: ukbot/revision.py:132
 #, python-format
@@ -95,254 +306,92 @@ msgid ""
 "can occur for invalid wiki text."
 msgstr ""
 
-#: ukbot/ukbot.py:754
-msgid "articles"
-msgstr ""
-"%(articlecount)d {{subst:PLURAL:%(articlecount)d|artikkeli|artikkelia}}"
-
-#: ukbot/ukbot.py:756
-msgid "{{Kolonner}}\n"
-msgstr "{{Sarakkeet}}\n"
-
-#: ukbot/ukbot.py:786
-#, python-format
-msgid "The filter name \"%s\" was not understood"
-msgstr ""
-
-#: ukbot/ukbot.py:870
-msgid "Couldn't find the list of participants!"
-msgstr "Osallistujaluettelon löytäminen epäonnistui!"
-
-#: ukbot/ukbot.py:898
-#, python-format
-msgid ""
-"There are no point rules defined for this contest. Point rules are defined "
-"by {{tl|%(template)s}}."
-msgstr ""
-"Tähän kilpailuun ei ole asetettu pistelaskusääntöjä. Säännöt merkitään näin: "
-"{{tl|%(template)s}}."
-
-#: ukbot/ukbot.py:943
-#, fuzzy, python-format
-msgid "Could not parse {{tlx|%(template)s|%(firstarg)s}} template: %(err)s"
-msgstr "{{tl|%(template)s}}-mallineen ymmärtäminen epäonnistui."
-
-#: ukbot/ukbot.py:973
-#, python-format
-msgid "Unkown argument given to {{tl|%(template)s}}: %(argument)s"
-msgstr ""
-"Tuntematon argumentti on annettu kohteeseen {{tl|%(template)s}}: %(argument)s"
-
-#: ukbot/ukbot.py:1004
-#, python-format
-msgid "Couldn't parse the date given to the {{tl|%(template)s}} template."
-msgstr ""
-"{{tl|%(template)s}}-mallineeseen annettu päivämäärä ei tullut ymmärretyksi."
-
-#: ukbot/ukbot.py:1037
-#, python-format
-msgid ""
-"Could not find the user %(user)s given to the {{tl|%(template)s}} template."
-msgstr "Käyttäjää %(user)s ri löytynyt {{tl|%(template)s}}-mallineesta."
-
-#: ukbot/ukbot.py:1050 ukbot/ukbot.py:1090
-#, python-format
-msgid ""
-"Failed to parse the %(template)s template: Did not find a site matching the "
-"site prefix %(prefix)s"
-msgstr ""
-
-#: ukbot/ukbot.py:1069 ukbot/ukbot.py:1109
-#, python-format
-msgid ""
-"Couldn't find the user %(user)s given to the {{tl|%(template)s}} template."
-msgstr "Ei löydetty käyttäjää %(user)s {{tl|%(template)s}}-mallineesta."
-
-#: ukbot/ukbot.py:1244
-msgid "Day"
-msgstr "Päivä"
-
-#: ukbot/ukbot.py:1245
-msgid "Points"
-msgstr "Pisteet"
-
-#: ukbot/ukbot.py:1248 ukbot/ukbot.py:1463 ukbot/ukbot.py:1650
-#: ukbot/ukbot.py:1651 ukbot/ukbot.py:1652
-msgid "%e. %B %Y, %H:%M"
-msgstr "%e. %Bta %Y kello %H.%M"
-
-#: ukbot/ukbot.py:1249
-#, python-format
-msgid "Updated %(date)s"
-msgstr "Päivitetty %(date)s"
-
-#: ukbot/ukbot.py:1284
-#, python-format
-msgid "Weekly contest for week %(week)d"
-msgstr "Viikon %(week)d kilpailu"
-
-#: ukbot/ukbot.py:1286
-#, python-format
-msgid "Weekly contest for week %(startweek)d–%(endweek)d"
-msgstr "Viikkojen %(startweek)d–%(endweek)d kilpailu"
-
-#: ukbot/ukbot.py:1364
-msgid "Regards"
-msgstr "Terveisin"
-
-#: ukbot/ukbot.py:1364
-msgid "and"
-msgstr "ja"
-
-#: ukbot/ukbot.py:1394
-#, python-format
-msgid ""
-"Now you must check if the results look ok. If there are error messages at "
-"the bottom of the [[%(page)s|contest page]], you should check that the "
-"related contributions have been awarded the correct number of points. Also "
-"check if there are comments or complaints on the discussion page. If "
-"everything looks fine, [%(link)s click here] (and save) to indicate that I "
-"can send out the awards at first occasion."
-msgstr ""
-"Nyt sinun on tarkistettava tulokset. Mikäli [[%(page)s|kilpailusivun]] "
-"lopussa on virheilmoituksia, on sinun tarkistettava, että muokkauksista on "
-"saatu oikea määrä pisteitä. Katso myös onko keskustelusivulla kommentteja "
-"tai valituksia. Jos kaikki näyttää olevan kunnossa, paina [%(link)s tästä] "
-"(ja tallenna), niin rusetit lähetetään melko nopeasti."
-
-#: ukbot/ukbot.py:1395
-msgid "Thanks, ~~~~"
-msgstr "Terveisin, ~~~~"
-
-#: ukbot/ukbot.py:1406
-#, python-format
-msgid "Awards have been [%(link)s sent out]."
-msgstr "Rusetit on nyt [%(link)s jaettu]."
-
-#: ukbot/ukbot.py:1595 ukbot/ukbot.py:2337 ukbot/ukbot.py:2340
-msgid "UKBot encountered a problem"
-msgstr "UKBot havaitsi ongelman"
-
-#: ukbot/ukbot.py:1645
-msgid ""
-"This contest is closed – thanks to everyone who participated! Awards will be "
-"sent out as soon as the contest organizer has checked the results."
-msgstr ""
-"Tämä kilpailu on päättynyt – kiitos kaikille osallistuneille! Rusetit "
-"jaetaan heti kun kilpailun järjestäjä on tarkistanut tulokset."
-
-#: ukbot/ukbot.py:1647
-msgid "This contest is closed – thanks to everyone who participated!"
-msgstr "Tämä kilpailu on päättynyt – kiitos kaikille osallistuneille!"
-
-#: ukbot/ukbot.py:1654
-#, python-format
-msgid ""
-"Last updated %(lastupdate)s. The contest is open from %(startdate)s to "
-"%(enddate)s."
-msgstr ""
-"Päivitetty viimeksi %(lastupdate)s. Kilpailu on avoinna  %(startdate)s – "
-"%(enddate)s."
-
-#: ukbot/ukbot.py:1675
-#, fuzzy, python-format
-msgid "UKBot encountered the following problems with the page [[%s]]"
-msgstr "UKBot havaitsi seuraavat ongelmat artikkeliin [[:%s]] liittyen"
-
-#: ukbot/ukbot.py:1709
-#, python-format
-msgid "Results markers %(start_marker)s and %(end_marker)s not found"
-msgstr ""
-
-#: ukbot/ukbot.py:1720
-#, python-format
-msgid "No \"%(section_name)s\" section found."
-msgstr ""
-
-#: ukbot/ukbot.py:1730
-msgid "Updating with final results, the contest is now closed."
-msgstr "Lisätään lopulliset tulokset ja merkitään kilpailu päättyneeksi."
-
-#: ukbot/ukbot.py:1732
-msgid "Checking results and handing out awards"
-msgstr "Tarkistetaan tulokset ja jaetaan rusetit"
-
-#: ukbot/ukbot.py:1734
-msgid "Updating"
-msgstr "Päivitetään"
-
-#: ukbot/ukbot.py:1860
-#, python-format
-msgid "The weekly contest is: %(link)s"
-msgstr "Viikon kilpailu on: %(link)s"
-
-#: ukbot/ukbot.py:2201
+#: ukbot/sites.py:63
 #, python-format
 msgid "Page does not exist: [[%(pagename)s]]"
 msgstr ""
 
-#: ukbot/ukbot.py:2218
+#: ukbot/sites.py:80
 #, python-format
 msgid "Could not found a site matching the prefix \"%(key)s\""
 msgstr ""
 
-#: ukbot/ukbot.py:2366
+#: ukbot/ukbot.py:169
 #, python-format
 msgid "#REDIRECT [[%s]]"
 msgstr "#OHJAUS [[%s]]"
 
-#: ukbot/ukbot.py:2368
+#: ukbot/ukbot.py:171
 #, python-format
 msgid "Redirecting to %s"
 msgstr "Ohjaus sivulle %s"
 
-#: ukbot/filters.py:120
-#, fuzzy
-msgid "Too few arguments given to this template."
+#: ukbot/user.py:681
+msgid "articles"
 msgstr ""
-"Tuntematon argumentti on annettu kohteeseen {{tl|%(template)s}}: %(argument)s"
+"%(articlecount)d {{subst:PLURAL:%(articlecount)d|artikkeli|artikkelia}}"
 
-#: ukbot/filters.py:168
-#, fuzzy, python-format
-msgid ""
-"Could not analyze page %(article)s because the revision %(rev)d could not be "
-"parsed: %(error)s"
-msgstr ""
-"Artikkelin %(article)s analysointi epäonnistui sillä versio %(prevrev)d tai "
-"%(rev)d ei tullut ymmärreyksi: %(error)s"
+#: ukbot/user.py:683
+msgid "{{Kolonner}}\n"
+msgstr "{{Sarakkeet}}\n"
 
-#: ukbot/filters.py:199
-msgid "Could not parse the catignore page"
-msgstr "Catignore-sivun sisältöä ei ymmärretty"
-
-#: ukbot/filters.py:204
-msgid "No category values given!"
-msgstr ""
-
-#: ukbot/filters.py:419
-msgid "Encountered an infinite category loop: "
-msgstr "Jumiutunut loputtomaan luokkasilmukkaan: "
-
-#: ukbot/filters.py:435
-#, fuzzy
-msgid "No byte limit (second argument) given"
-msgstr ""
-"Tavurajaa (toinen argumentti) ei ole annettu kohteeseen {{tlx|%(template)s|"
-"%(firstarg)s}}"
-
-#: ukbot/filters.py:669
+#: ukbot/rules/byte.py:20
 #, python-format
-msgid "No \"%s\" parameter given"
+msgid "%(bytes).f bytes"
+msgstr "%(bytes).f {{subst:PLURAL:%(bytes).f|tavu|tavua}}"
+
+#: ukbot/rules/contrib.py:16
+msgid "contribution"
 msgstr ""
+
+#: ukbot/rules/external_link.py:30
+msgid "links"
+msgstr "%(links).f {{subst:PLURAL:%(links).f|linkkit|linkkiä}}"
+
+#: ukbot/rules/image.py:142
+msgid "images"
+msgstr "%(images).f {{subst:PLURAL:%(images).f|kuva|kuvaa}}"
+
+#: ukbot/rules/new.py:16
+msgid "new page"
+msgstr "uusi sivu"
+
+#: ukbot/rules/qualified.py:22
+msgid "qualified"
+msgstr "hyväksytty"
+
+#: ukbot/rules/redirect.py:16
+msgid "redirect"
+msgstr "uudelleenohjaus"
+
+#: ukbot/rules/ref.py:81
+msgid "references"
+msgstr ""
+"{{subst:PLURAL:%(num)d|Yksi lähde on lisätty|%(num)d lähdettä on lisätty}}"
+
+#: ukbot/rules/ref.py:85
+msgid "reference pointers"
+msgstr ""
+"{{subst:PLURAL:%(num)d|Yksi viittaus jo olemassa olevaan lähteeseen|%(num)d "
+"viittausta jo olemassa oleviin lähteisiin}}"
+
+#: ukbot/rules/regexp.py:19
+msgid "regexp"
+msgstr ""
+
+#: ukbot/rules/regexp.py:44
+msgid "section"
+msgstr ""
+
+#: ukbot/rules/rule.py:76
+#, python-format
+msgid "bonus %(words)d words"
+msgstr "bonus %(words)d {{subst:PLURAL:%(words)d|sana|sanaa}}"
 
 #: ukbot/rules/templateremoval.py:88
 #, python-format
 msgid "removal of {{tl|%(template)s}}"
 msgstr "mallineen {{tl|%(template)s}} poisto"
-
-#: ukbot/rules/contrib.py:16
-msgid "contribution"
-msgstr ""
 
 #: ukbot/rules/wikidata.py:47
 #, python-format
@@ -369,47 +418,6 @@ msgstr ""
 msgid "%(count)d %(property)s statements"
 msgstr ""
 
-#: ukbot/rules/redirect.py:16
-msgid "redirect"
-msgstr "uudelleenohjaus"
-
-#: ukbot/rules/new.py:16
-msgid "new page"
-msgstr "uusi sivu"
-
-#: ukbot/rules/image.py:142
-msgid "images"
-msgstr "%(images).f {{subst:PLURAL:%(images).f|kuva|kuvaa}}"
-
-#: ukbot/rules/qualified.py:22
-msgid "qualified"
-msgstr "hyväksytty"
-
-#: ukbot/rules/rule.py:72
-#, python-format
-msgid "bonus %(words)d words"
-msgstr "bonus %(words)d {{subst:PLURAL:%(words)d|sana|sanaa}}"
-
-#: ukbot/rules/byte.py:20
-#, python-format
-msgid "%(bytes).f bytes"
-msgstr "%(bytes).f {{subst:PLURAL:%(bytes).f|tavu|tavua}}"
-
-#: ukbot/rules/ref.py:81
-msgid "references"
-msgstr ""
-"{{subst:PLURAL:%(num)d|Yksi lähde on lisätty|%(num)d lähdettä on lisätty}}"
-
-#: ukbot/rules/ref.py:85
-msgid "reference pointers"
-msgstr ""
-"{{subst:PLURAL:%(num)d|Yksi viittaus jo olemassa olevaan lähteeseen|%(num)d "
-"viittausta jo olemassa oleviin lähteisiin}}"
-
-#: ukbot/rules/external_link.py:30
-msgid "links"
-msgstr "%(links).f {{subst:PLURAL:%(links).f|linkkit|linkkiä}}"
-
 #: ukbot/rules/word.py:20
 #, python-format
 msgid "%(words).f words"
@@ -426,8 +434,8 @@ msgstr "%(words).f {{subst:PLURAL:%(words).f|sana|sanaa}}"
 #~ "%(start)s+%(end)s."
 
 #~ msgid ""
-#~ "Note that the contest this week is [[%(url)s|{{%(template)s|%(weekarg)s="
-#~ "%(week)s}}]]. Join in!"
+#~ "Note that the contest this week is [[%(url)s|{{%(template)s|"
+#~ "%(weekarg)s=%(week)s}}]]. Join in!"
 #~ msgstr ""
 #~ "Muista, että tämän viikon kilpailu on [[%(url)s|{{%(template)s|"
 #~ "%(weekarg)s=%(week)s}}]]. Onnea matkaan!"
